# Simple-Web-Server

./: .gitignore  CMakeLists.txt  client_http.hpp  http_examples.cpp  https_examples.cpp  server_http.hpp
cmake/: CMakeList.txt  utilities.cmake
cmake/config/: linux-gcc4.cmake  mac-gcc4.cmake  win-vs140.cmake
